--- a/debuginterceptor/build.gradle
+++ b/debuginterceptor/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
-def vCode = 1
-def vName = '0.1'
+def vCode = 2
+def vName = '0.2'
 
 ext {
     bintrayRepo = 'Novasa'
@@ -16,8 +16,8 @@ ext {
     libraryVersion = vName
     libraryDescription = 'An OkHttp3 interceptor that prints debugging info'
 
-    siteUrl = 'https://github.com/Novasa/SectioningAdapter'
-    gitUrl = 'https://github.com/Novasa/SectioningAdapter.git'
+    siteUrl = 'https://github.com/Novasa/DebugInterceptor'
+    gitUrl = 'https://github.com/Novasa/DebugInterceptor.git'
 
     developerId = 'mhswtf'
     developerName = 'Mikkel Schläger'
@@ -35,9 +35,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
+        versionCode vCode
+        versionName vName
     }
 
     buildTypes {
@@ -46,7 +45,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -54,7 +52,6 @@ dependencies {
 
     implementation "com.squareup.okhttp3:okhttp:3.14.2"
     implementation "com.google.code.gson:gson:2.8.5"
-
 }
 
 if (project.rootProject.file('local.properties').exists()) {
